fix(table): +border-spacing: 0 (#4185)
* fix(table): +border-spacing: 0

* fix(table): remove style from reset.css

--- a/packages/mantine/src/components/table/Table.module.css
+++ b/packages/mantine/src/components/table/Table.module.css
@@ -5,6 +5,8 @@
 .table {
     width: 100%;
     padding-bottom: var(--mantine-spacing-sm);
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 .header {
